:bug: Fix width overflow issues on smaller screens

--- a/src/styles/buildingBlocks.styl
+++ b/src/styles/buildingBlocks.styl
@@ -4,6 +4,8 @@ body
     min-height 100%
     & > .main
         flex 1 0 auto
+        width 100%
+        overflow-x hidden
 footer
     flex 0 0 auto
 
