--- a/src/styles/catnip.styl
+++ b/src/styles/catnip.styl
@@ -126,6 +126,7 @@ catnip-block, .catnip-block
         padding 0.5rem 0.75rem
         margin 0.5rem 0
         gap 0.5rem
+        overflow auto
     &.computed, .catnip-block-aConstantInput
         gap 0.25rem
         border-radius 100em !important
