--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -82,6 +82,7 @@ code pre
     padding 1.5rem 2rem
     line-height 1.5
     background white
+    overflow auto
     {shadamb}
 
 p.big
